frame/support/test/tests/pallet_ui/storage_info_unsatisfied_nmap.stderr
error[E0277]: the trait bound `Bar: MaxEncodedLen` is not satisfied
  --> tests/pallet_ui/storage_info_unsatisfied_nmap.rs:10:12
   |
10 |     #[pallet::generate_storage_info]
   |               ^^^^^^^^^^^^^^^^^^^^^ the trait `MaxEncodedLen` is not implemented for `Bar`
   |
   = note: required because of the requirements on the impl of `KeyGeneratorMaxEncodedLen` for `Key<frame_support::Twox64Concat, Bar>`
   = note: required because of the requirements on the impl of `StorageInfoTrait` for `frame_support::pallet_prelude::StorageNMap<_GeneratedPrefixForStorageFoo<T>, Key<frame_support::Twox64Concat, Bar>, u32>`
note: required by `storage_info`
  --> $WORKSPACE/frame/support/src/traits/storage.rs
   |
   |     fn storage_info() -> Vec<StorageInfo>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
